--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,26 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+
+def task_bootRun = "bootRun"
+def task_compileSaas = 'compileSaas'
+def task_start = 'start'
+
+def path_saasDirPath = '.'
+
+tasks.register(task_compileSaas, Exec) {
+	workingDir path_saasDirPath
+	standardOutput = new ByteArrayOutputStream()
+	commandLine 'sh', './scripts/buildSass.sh'
+	doLast {
+		println "Sass compiled"
+	}
+}
+
+tasks.register(task_start) {
+	dependsOn(
+			task_compileSaas,
+			task_bootRun
+	)
+	tasks.named(task_bootRun).get().mustRunAfter(task_compileSaas)
 }
